--- a/portfolio-bts-sio/conception/charte-graphique/site/css/style.css
+++ b/portfolio-bts-sio/conception/charte-graphique/site/css/style.css
@@ -1,3 +1,54 @@
+body{
+    display: flex;
+    width: 100vw;
+}
+
+#left{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 21%;
+    background: linear-gradient(to bottom, rgb(5, 0, 26), rgb(30, 30, 30));
+}
+
+#left ul{
+    display: flex;
+    flex-direction: column;
+}
+
+#left h2 {
+    color: #d27541;
+}
+
+#left a{
+    color: white;
+}
+
+#right{
+    margin-left: 21%;
+    width: 80%;
+}
+
+#banner {
+    background-image: url("../images/9b2611ad-84b2-41b7-95c5-dd388b4c5e32.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#banner h1 {
+    font-size: 2.5rem;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    color: white;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -12,9 +63,9 @@ h1,h2,h3,p{
     font-family: "Montserrat", sans-serif;;
 }
 
-h1, h2{
+/* h1, h2{
     color: #ff5722;
-}
+} */
 
 h1{
     text-transform: uppercase;
