--- a/portfolio-bts-sio/conception/site/css/style.css
+++ b/portfolio-bts-sio/conception/site/css/style.css
@@ -3,32 +3,49 @@ body{
     width: 100vw;
 }
 
+#lowercase {
+    text-transform: lowercase !important;
+}
+
 #left{
     position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    width: 21%;
+    width: 15%;
     background: linear-gradient(to bottom, rgb(5, 0, 26), rgb(30, 30, 30));
 }
 
 #left ul{
     display: flex;
     flex-direction: column;
+    list-style-type: none; /* Supprime les puces de la liste */
+    padding-top: 150px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+#left ul li {
+    margin-bottom: 50px; /* Ajoute un espace entre les éléments de la liste */
 }
 
 #left h2 {
     color: #d27541;
+    margin-top: 30px;
 }
 
 #left a{
-    color: white;
+    color: darkgrey;
+}
+
+a:hover {
+    color: whitesmoke !important; /* Changez la couleur du texte */
 }
 
 #right{
-    margin-left: 21%;
-    width: 80%;
+    margin-left: 15%;
+    width: 85%;
 }
 
 #banner {
@@ -41,12 +58,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 0%;
 }
 
 #banner h1 {
     font-size: 2.5rem;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
-    color: white;
+    color:azure
 }
 
 *{
@@ -60,7 +78,7 @@ a{
 }
 
 h1,h2,h3,p{
-    font-family: "Montserrat", sans-serif;;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* h1, h2{
@@ -68,7 +86,7 @@ h1,h2,h3,p{
 } */
 
 h1{
-    text-transform: uppercase;
+    text-transform: none;
 }
 
 h2{
